# offgrid

./: .env.example  .gitignore  CLAUDE.md  index.html  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/instagram/: auth.rs  media.rs  mentions.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/callback/: route.ts
src/app/api/auth/connect/: route.ts
src/app/api/auth/disconnect/: route.ts
src/app/api/auth/instagram/: route.ts
src/app/api/auth/status/: route.ts
src/app/api/cron/: route.ts
src/app/api/cron/trigger/: route.ts
src/app/api/instagram/mentions/: route.ts
src/app/api/instagram/mentions/[id]/repost/: route.ts
src/app/api/instagram/mentions/[id]/skip/: route.ts
src/app/api/instagram/publish/: route.ts
src/app/api/queue/: route.ts
src/app/api/queue/[id]/: route.ts
src/app/api/stats/: route.ts
src/app/api/upload/: route.ts
src/app/mentions/: page.tsx
src/app/publish/: page.tsx
src/app/queue/: page.tsx
src/app/settings/: page.tsx
src/components/: DropZone.tsx  MediaPreview.tsx  MentionCard.tsx  drop-zone.tsx  phone-frame-preview.tsx  sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  spinner.tsx
src/lib/: blob.ts  instagram.ts  tauri.ts  token-refresh.ts
src/lib/db/: index.ts  schema.ts
src/pages/: Mentions.tsx  Publish.tsx  Settings.tsx
